--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -138,6 +138,19 @@
      <string>Bache</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="btnExport">
+    <property name="geometry">
+     <rect>
+      <x>290</x>
+      <y>40</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Exportar</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
@@ -145,7 +158,7 @@
      <x>0</x>
      <y>0</y>
      <width>747</width>
-     <height>20</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
