--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -56,10 +56,10 @@
    <widget class="QLabel" name="lblCmNum">
     <property name="geometry">
      <rect>
-      <x>110</x>
+      <x>100</x>
       <y>50</y>
-      <width>41</width>
-      <height>16</height>
+      <width>51</width>
+      <height>20</height>
      </rect>
     </property>
     <property name="text">
@@ -115,7 +115,7 @@
    <widget class="QPushButton" name="btnPlot">
     <property name="geometry">
      <rect>
-      <x>470</x>
+      <x>380</x>
       <y>40</y>
       <width>71</width>
       <height>23</height>
@@ -141,8 +141,8 @@
    <widget class="QPushButton" name="btnExport">
     <property name="geometry">
      <rect>
-      <x>380</x>
-      <y>40</y>
+      <x>460</x>
+      <y>10</y>
       <width>71</width>
       <height>23</height>
      </rect>
@@ -154,8 +154,8 @@
    <widget class="QCheckBox" name="chbxFilter">
     <property name="geometry">
      <rect>
-      <x>470</x>
-      <y>10</y>
+      <x>300</x>
+      <y>40</y>
       <width>71</width>
       <height>20</height>
      </rect>
@@ -167,7 +167,7 @@
    <widget class="QComboBox" name="cmbxWindow">
     <property name="geometry">
      <rect>
-      <x>560</x>
+      <x>550</x>
       <y>40</y>
       <width>69</width>
       <height>22</height>
@@ -177,7 +177,7 @@
    <widget class="QComboBox" name="cmbxGrade">
     <property name="geometry">
      <rect>
-      <x>640</x>
+      <x>630</x>
       <y>40</y>
       <width>69</width>
       <height>22</height>
@@ -197,6 +197,16 @@
      <string>Ventana / Grado</string>
     </property>
    </widget>
+   <widget class="QComboBox" name="cmbxSerialPorts">
+    <property name="geometry">
+     <rect>
+      <x>688</x>
+      <y>10</y>
+      <width>101</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
@@ -204,7 +214,7 @@
      <x>0</x>
      <y>0</y>
      <width>900</width>
-     <height>21</height>
+     <height>19</height>
     </rect>
    </property>
   </widget>
@@ -217,6 +227,11 @@
     <bool>false</bool>
    </attribute>
   </widget>
+  <action name="actionPuerto_serial">
+   <property name="text">
+    <string>Puerto serial</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <customwidgets>
