Refactor some code and added a class for processing data instead of storing it

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -102,21 +102,21 @@
    <widget class="QPushButton" name="btnFile">
     <property name="geometry">
      <rect>
-      <x>380</x>
+      <x>370</x>
       <y>10</y>
-      <width>71</width>
+      <width>21</width>
       <height>23</height>
      </rect>
     </property>
     <property name="text">
-     <string>Archivo...</string>
+     <string>...</string>
     </property>
    </widget>
    <widget class="QPushButton" name="btnPlot">
     <property name="geometry">
      <rect>
-      <x>380</x>
-      <y>40</y>
+      <x>480</x>
+      <y>10</y>
       <width>71</width>
       <height>23</height>
      </rect>
@@ -128,8 +128,8 @@
    <widget class="QPushButton" name="btnExport">
     <property name="geometry">
      <rect>
-      <x>380</x>
-      <y>70</y>
+      <x>560</x>
+      <y>10</y>
       <width>71</width>
       <height>23</height>
      </rect>
@@ -141,8 +141,8 @@
    <widget class="QCheckBox" name="chbxFilter">
     <property name="geometry">
      <rect>
-      <x>300</x>
-      <y>40</y>
+      <x>410</x>
+      <y>10</y>
       <width>71</width>
       <height>20</height>
      </rect>
@@ -154,8 +154,8 @@
    <widget class="QComboBox" name="cmbxWindow">
     <property name="geometry">
      <rect>
-      <x>470</x>
-      <y>40</y>
+      <x>410</x>
+      <y>60</y>
       <width>69</width>
       <height>22</height>
      </rect>
@@ -164,8 +164,8 @@
    <widget class="QComboBox" name="cmbxGrade">
     <property name="geometry">
      <rect>
-      <x>550</x>
-      <y>40</y>
+      <x>490</x>
+      <y>60</y>
       <width>69</width>
       <height>22</height>
      </rect>
@@ -174,8 +174,8 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>480</x>
-      <y>10</y>
+      <x>410</x>
+      <y>40</y>
       <width>101</width>
       <height>16</height>
      </rect>
@@ -197,9 +197,9 @@
    <widget class="QPushButton" name="btnLngLat">
     <property name="geometry">
      <rect>
-      <x>790</x>
-      <y>80</y>
-      <width>75</width>
+      <x>800</x>
+      <y>60</y>
+      <width>71</width>
       <height>23</height>
      </rect>
     </property>
@@ -214,7 +214,7 @@
      <x>0</x>
      <y>0</y>
      <width>900</width>
-     <height>21</height>
+     <height>19</height>
     </rect>
    </property>
   </widget>
