--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -17,8 +17,8 @@
    <widget class="QPushButton" name="btnCapturar">
     <property name="geometry">
      <rect>
-      <x>800</x>
-      <y>10</y>
+      <x>810</x>
+      <y>70</y>
       <width>71</width>
       <height>23</height>
      </rect>
@@ -27,64 +27,25 @@
      <string>Capturar</string>
     </property>
    </widget>
-   <widget class="QLabel" name="lblDistancia">
-    <property name="geometry">
-     <rect>
-      <x>30</x>
-      <y>50</y>
-      <width>71</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Distancia:</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="lblCm">
-    <property name="geometry">
-     <rect>
-      <x>160</x>
-      <y>50</y>
-      <width>21</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>cm</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="lblCmNum">
-    <property name="geometry">
-     <rect>
-      <x>100</x>
-      <y>50</y>
-      <width>51</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>0</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="lblArchivo">
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>10</y>
-      <width>131</width>
+      <y>60</y>
+      <width>51</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>Nombre de archivo:</string>
+     <string>Archivo:</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="leFile">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>10</y>
-      <width>191</width>
+      <x>80</x>
+      <y>60</y>
+      <width>181</width>
       <height>20</height>
      </rect>
     </property>
@@ -102,8 +63,8 @@
    <widget class="QPushButton" name="btnFile">
     <property name="geometry">
      <rect>
-      <x>370</x>
-      <y>10</y>
+      <x>270</x>
+      <y>60</y>
       <width>21</width>
       <height>23</height>
      </rect>
@@ -115,8 +76,8 @@
    <widget class="QPushButton" name="btnPlot">
     <property name="geometry">
      <rect>
-      <x>480</x>
-      <y>10</y>
+      <x>380</x>
+      <y>60</y>
       <width>71</width>
       <height>23</height>
      </rect>
@@ -125,25 +86,25 @@
      <string>Graficar</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="btnExport">
+   <widget class="QPushButton" name="btnSave">
     <property name="geometry">
      <rect>
-      <x>560</x>
-      <y>10</y>
+      <x>300</x>
+      <y>60</y>
       <width>71</width>
       <height>23</height>
      </rect>
     </property>
     <property name="text">
-     <string>Exportar</string>
+     <string>Guardar</string>
     </property>
    </widget>
    <widget class="QCheckBox" name="chbxFilter">
     <property name="geometry">
      <rect>
-      <x>410</x>
-      <y>10</y>
-      <width>71</width>
+      <x>530</x>
+      <y>70</y>
+      <width>61</width>
       <height>20</height>
      </rect>
     </property>
@@ -152,30 +113,36 @@
     </property>
    </widget>
    <widget class="QComboBox" name="cmbxWindow">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
-      <x>410</x>
-      <y>60</y>
-      <width>69</width>
+      <x>580</x>
+      <y>70</y>
+      <width>51</width>
       <height>22</height>
      </rect>
     </property>
    </widget>
-   <widget class="QComboBox" name="cmbxGrade">
+   <widget class="QComboBox" name="cmbxOrder">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
-      <x>490</x>
-      <y>60</y>
-      <width>69</width>
+      <x>640</x>
+      <y>70</y>
+      <width>51</width>
       <height>22</height>
      </rect>
     </property>
    </widget>
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="lblWinOrd">
     <property name="geometry">
      <rect>
-      <x>410</x>
-      <y>40</y>
+      <x>590</x>
+      <y>50</y>
       <width>101</width>
       <height>16</height>
      </rect>
@@ -187,8 +154,8 @@
    <widget class="QComboBox" name="cmbxSerialPorts">
     <property name="geometry">
      <rect>
-      <x>688</x>
-      <y>10</y>
+      <x>700</x>
+      <y>70</y>
       <width>101</width>
       <height>22</height>
      </rect>
@@ -197,14 +164,73 @@
    <widget class="QPushButton" name="btnLngLat">
     <property name="geometry">
      <rect>
-      <x>800</x>
-      <y>60</y>
+      <x>760</x>
+      <y>10</y>
+      <width>121</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Enviar Coordenadas</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lblSensorsNum">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>10</y>
+      <width>121</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Cantidad de sensores:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>310</x>
+      <y>10</y>
+      <width>121</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Servidor de mapas:</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="leHost">
+    <property name="geometry">
+     <rect>
+      <x>410</x>
+      <y>10</y>
+      <width>261</width>
+      <height>20</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnHost">
+    <property name="geometry">
+     <rect>
+      <x>680</x>
+      <y>10</y>
       <width>71</width>
       <height>23</height>
      </rect>
     </property>
     <property name="text">
-     <string>Enviar</string>
+     <string>Cambiar</string>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="cmbxSensorsNum">
+    <property name="geometry">
+     <rect>
+      <x>150</x>
+      <y>10</y>
+      <width>51</width>
+      <height>22</height>
+     </rect>
     </property>
    </widget>
   </widget>
@@ -214,7 +240,7 @@
      <x>0</x>
      <y>0</y>
      <width>900</width>
-     <height>19</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
@@ -230,6 +256,16 @@
   <action name="actionPuerto_serial">
    <property name="text">
     <string>Puerto serial</string>
+   </property>
+  </action>
+  <action name="actionCantidad_de_sensores">
+   <property name="text">
+    <string>Cantidad de sensores...</string>
+   </property>
+  </action>
+  <action name="actionCambiar_servidor">
+   <property name="text">
+    <string>Cambiar servidor...</string>
    </property>
   </action>
  </widget>
