--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1000</width>
-    <height>800</height>
+    <height>150</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -59,12 +59,25 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>110</y>
-      <width>971</width>
-      <height>631</height>
+      <x>10</x>
+      <y>120</y>
+      <width>981</width>
+      <height>521</height>
      </rect>
     </property>
+    <widget class="QSlider" name="verticalSlider">
+     <property name="geometry">
+      <rect>
+       <x>490</x>
+       <y>430</y>
+       <width>19</width>
+       <height>160</height>
+      </rect>
+     </property>
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+    </widget>
    </widget>
    <widget class="QPushButton" name="btnFile">
     <property name="enabled">
@@ -185,14 +198,14 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>870</x>
+      <x>920</x>
       <y>10</y>
-      <width>121</width>
+      <width>61</width>
       <height>23</height>
      </rect>
     </property>
     <property name="text">
-     <string>Enviar Coordenadas</string>
+     <string>Enviar</string>
     </property>
    </widget>
    <widget class="QLabel" name="lblSensorsNum">
@@ -217,9 +230,9 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>420</x>
+      <x>220</x>
       <y>10</y>
-      <width>121</width>
+      <width>130</width>
       <height>16</height>
      </rect>
     </property>
@@ -233,9 +246,9 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>520</x>
+      <x>320</x>
       <y>10</y>
-      <width>261</width>
+      <width>270</width>
       <height>20</height>
      </rect>
     </property>
@@ -246,9 +259,9 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>790</x>
+      <x>600</x>
       <y>10</y>
-      <width>71</width>
+      <width>80</width>
       <height>23</height>
      </rect>
     </property>
@@ -301,6 +314,32 @@
      <bool>true</bool>
     </property>
    </widget>
+   <widget class="QLabel" name="lbllCoordsVal">
+    <property name="geometry">
+     <rect>
+      <x>780</x>
+      <y>10</y>
+      <width>131</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lblCoords">
+    <property name="geometry">
+     <rect>
+      <x>700</x>
+      <y>10</y>
+      <width>81</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Coordenadas:</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
@@ -308,7 +347,7 @@
      <x>0</x>
      <y>0</y>
      <width>1000</width>
-     <height>19</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
