--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -18,7 +18,7 @@
     <property name="geometry">
      <rect>
       <x>920</x>
-      <y>70</y>
+      <y>80</y>
       <width>71</width>
       <height>23</height>
      </rect>
@@ -186,7 +186,7 @@
     <property name="geometry">
      <rect>
       <x>690</x>
-      <y>70</y>
+      <y>80</y>
       <width>101</width>
       <height>22</height>
      </rect>
@@ -224,7 +224,7 @@
      <string>Cantidad de sensores:</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="lblMapServer">
     <property name="enabled">
      <bool>true</bool>
     </property>
@@ -286,7 +286,7 @@
     <property name="geometry">
      <rect>
       <x>800</x>
-      <y>70</y>
+      <y>80</y>
       <width>111</width>
       <height>23</height>
      </rect>
@@ -314,7 +314,7 @@
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QLabel" name="lbllCoordsVal">
+   <widget class="QLabel" name="lblCoordsVal">
     <property name="geometry">
      <rect>
       <x>780</x>
@@ -338,6 +338,32 @@
     </property>
     <property name="text">
      <string>Coordenadas:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lblPothole">
+    <property name="geometry">
+     <rect>
+      <x>700</x>
+      <y>50</y>
+      <width>51</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Bache:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lblDetected">
+    <property name="geometry">
+     <rect>
+      <x>760</x>
+      <y>50</y>
+      <width>61</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
     </property>
    </widget>
   </widget>
